--- a/src/components/header.css
+++ b/src/components/header.css
@@ -74,3 +74,67 @@
     margin: 0;
     z-index: 0;
 }
+
+.scroll-btn {
+    /* border: 1px solid red; */
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    aspect-ratio: 1;
+    left: 50%;
+    translate: -25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5px;
+    overflow: hidden;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    padding-top: 10px;
+    transition: all 0.5s;
+}
+
+.scroll-btn:hover {
+    margin-bottom: 10px;
+    scale: 1.5;
+    background-color: rgb(11, 11, 11);
+}
+
+.scroll-btn span {
+    /* background: white; */
+    width: 15px;
+    aspect-ratio: 1;
+    transform: rotate(45deg);
+    border-bottom: 1px solid white;
+    border-right: 1px solid white;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-name: scrollSpans;
+    transition: all 0.3s;
+}
+
+.scroll-btn span:nth-of-type(2) {
+    animation-delay: 0.25s;
+}
+
+.scroll-btn span:nth-of-type(3) {
+    animation-delay: 0.5s;
+}
+
+@keyframes scrollSpans {
+    100% {
+        opacity: 0;
+        margin-bottom: 0;
+        margin-right: 0;
+    }
+    50% {
+        opacity: 1;
+        margin-bottom: 5px;
+        margin-right: 5px;
+    }
+    0% {
+        opacity: 0;
+        margin-bottom: 0;
+        margin-right: 0;
+    }
+}
