--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body,
 html {
     scroll-snap-type: y mandatory;
@@ -6,9 +11,8 @@ html {
 
 .GENERAL-CONTAINER {
     height: 100vh;
-    scroll-snap-type: y mandatory;
 }
 
 .component {
-    scroll-snap-align: start start;
+    scroll-snap-align: center center;
 }
