--- a/src/components/header.css
+++ b/src/components/header.css
@@ -41,7 +41,6 @@
 }
 
 .titles {
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     z-index: 1;
     text-justify: distribute-all-lines;
     width: 455px;
@@ -92,6 +91,9 @@
     border-top-right-radius: 20px;
     padding-top: 10px;
     transition: all 0.5s;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-name: pulse;
 }
 
 .scroll-btn:hover {
@@ -136,5 +138,22 @@
         opacity: 0;
         margin-bottom: 0;
         margin-right: 0;
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+        margin-bottom: 15px;
+    }
+
+    70% {
+        transform: scale(1);
+        margin-bottom: 0;
+    }
+
+    100% {
+        transform: scale(0.95);
+        margin-bottom: 15px;
     }
 }
