--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,8 @@ html {
     scroll-snap-align: center center;
     height: 100vh;
 }
+
+.bg-glass {
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(5px);
+}
