--- a/src/components/proyects.css
+++ b/src/components/proyects.css
@@ -35,5 +35,96 @@
 .proyect {
     width: 65%;
     height: 18vh;
+    padding: 5px;
     margin: 5px;
+    border-radius: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    gap: 100px;
+}
+
+.proyect h3 {
+    color: white;
+    text-align: center;
+    margin: 10px;
+    margin-bottom: 25px;
+    font-size: 150%;
+    margin-bottom: 30px;
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+    top: 0;
+}
+
+.proyect p {
+    margin-left: 10px;
+    margin-top: 50px;
+    color: gray;
+    font-weight: 900;
+    width: 255px;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.pr-img {
+    margin: 0;
+    margin-right: 5px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    width: 245px;
+    height: 105px;
+    margin-left: 50px;
+}
+
+.pr-descriptions {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+}
+
+.links-btns {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.pr-icon {
+    color: #fff;
+    width: 20px;
+    height: 20px;
+}
+
+.lang-list {
+    color: #fff;
+    margin-left: 25px;
+}
+
+.lang-list ul {
+    margin-left: 15px;
+    width: 200%;
+}
+
+.links-btns a {
+    color: #fff;
+}
+
+.links-btns li::marker {
+    color: transparent;
 }
