--- a/src/components/proyects.css
+++ b/src/components/proyects.css
@@ -1,6 +1,6 @@
 #proyects {
     width: 100%;
-    position: absolute;
+    position: relative;
     z-index: 1;
     display: flex;
     flex-direction: column;
