--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,8 @@ html {
     background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(5px);
 }
+
+@media (max-width: 890px) {
+    * {
+    }
+}
