--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 
 body,
 html {
-    scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
 
@@ -24,7 +23,7 @@ html {
     backdrop-filter: blur(5px);
 }
 
-@media (max-width: 890px) {
+/* @media (max-width: 890px) {
     * {
     }
-}
+} */
