--- a/src/components/about.css
+++ b/src/components/about.css
@@ -251,3 +251,80 @@
     z-index: 999;
     border: none;
 }
+
+.scroll-btn-about {
+    /* border: 1px solid red; */
+
+    position: absolute;
+    bottom: 50px;
+    height: 50px;
+    aspect-ratio: 1;
+    left: 50%;
+    translate: -25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* overflow: hidden; */
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    padding-top: 10px;
+    transition: all 0.5s;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-name: pulse;
+}
+
+.scroll-btn-about span {
+    width: 15px;
+    aspect-ratio: 1;
+    transform: rotate(45deg);
+    border-bottom: 1px solid white;
+    border-right: 1px solid white;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-name: scrollSpans;
+    transition: all 0.3s;
+}
+
+.scroll-btn-about span:nth-of-type(2) {
+    animation-delay: 0.25s;
+}
+
+.scroll-btn-about span:nth-of-type(3) {
+    animation-delay: 0.5s;
+}
+
+@keyframes scrollSpans {
+    100% {
+        opacity: 0;
+        margin-bottom: 0;
+        margin-right: 0;
+    }
+    50% {
+        opacity: 1;
+        margin-bottom: 5px;
+        margin-right: 5px;
+    }
+    0% {
+        opacity: 0;
+        margin-bottom: 0;
+        margin-right: 0;
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+        margin-bottom: 15px;
+    }
+
+    70% {
+        transform: scale(1);
+        margin-bottom: 0;
+    }
+
+    100% {
+        transform: scale(0.95);
+        margin-bottom: 15px;
+    }
+}
