--- a/src/components/header.css
+++ b/src/components/header.css
@@ -88,6 +88,8 @@
     overflow: hidden;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
     padding-top: 10px;
     transition: all 0.5s;
     animation-duration: 2s;
@@ -98,7 +100,7 @@
 .scroll-btn:hover {
     margin-bottom: 10px;
     scale: 1.5;
-    background-color: rgb(11, 11, 11);
+    background-color: rgb(41, 41, 41);
 }
 
 .scroll-btn span {
@@ -162,17 +164,22 @@
         font-size: 50%;
     }
     .titles-container {
-        height: auto;
-        width: auto;
+        height: 50%;
+        width: 75%;
         padding: 10px;
     }
     .titles-container::before {
         width: auto;
+        height: 50%;
     }
     .titles {
         width: 235px;
     }
     .scroll-btn {
-        display: none;
+        bottom: 10%;
+        background-color: rgb(41, 41, 41);
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
+        padding: 10px;
     }
 }
