--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,19 @@
 body,
 html {
     scroll-behavior: smooth;
+    height: 100vh;
+    width: 100vw;
 }
 
 .GENERAL-CONTAINER {
     height: 100vh;
+    width: 100vw;
 }
 
 .component {
     scroll-snap-align: center center;
     height: 100vh;
+    width: 100vw;
 }
 
 .bg-glass {
