--- a/src/components/proyects.css
+++ b/src/components/proyects.css
@@ -1,4 +1,5 @@
 #proyects {
+    margin-top: 10px;
     width: 100%;
     position: relative;
     z-index: 1;
@@ -44,9 +45,10 @@
     flex-direction: row;
     align-items: center;
     gap: 100px;
+    /* font-size: 125%; */ /*! */
 }
 
-.proyect h2 {
+.pr-title {
     color: white;
     text-align: center;
     margin: 10px;
@@ -231,5 +233,60 @@
     100% {
         transform: scale(0.95);
         margin-bottom: 15px;
+    }
+}
+@media (max-width: 890px) {
+    /* #proyects {
+        width: auto;
+        height: auto;
+    } */
+
+    .scrollTop {
+        display: none;
+    }
+    .proyect {
+        flex-direction: column;
+        /* height: 39vh; */
+        height: auto;
+        gap: 0;
+        width: 75%;
+    }
+    .proyect p {
+        margin-top: 0;
+        padding: 10px;
+    }
+    .lang-list ul {
+        margin: 0;
+    }
+    .links {
+        flex-direction: column-reverse;
+        margin: 10px;
+    }
+
+    .links * {
+        margin: 0;
+    }
+
+    .links-btns {
+        font-size: 15px;
+        border: 1px dashed white;
+        border-radius: 10px;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        padding-left: 0;
+        padding-right: 0;
+        margin: 5px;
+        margin-inline: 10px;
+    }
+    .pr-img {
+        height: 75%;
+        width: 100%;
+    }
+    .pr-title {
+        font-size: 20px;
+        position: initial;
+        width: 80%;
+        height: 15%;
+        margin: 5px;
     }
 }
