style bug solved

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -183,7 +183,7 @@
 
 .btn-scroll {
     position: absolute;
-    bottom: -500%;
+    bottom: -50vh;
     right: 2%;
     width: 60px;
     height: 150px;
