--- a/src/components/about.css
+++ b/src/components/about.css
@@ -107,6 +107,11 @@
     transition: all 0.5s;
 }
 
+.contact-card li a {
+    color: #fff;
+    text-decoration: none;
+}
+
 .contact-card li:hover {
     color: #f5f5f5;
     text-decoration: underline;
