changed scroll btns css

--- a/src/components/proyects.css
+++ b/src/components/proyects.css
@@ -142,7 +142,7 @@
 .scrollTop {
     position: absolute;
     z-index: 999;
-    bottom: 50%;
+    bottom: 90vh;
     padding: 60px 30px;
     border: none;
     border-radius: 15px;
