--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,14 @@ html {
     scroll-behavior: smooth;
     height: 100vh;
     width: 100vw;
+    overflow-x: clip;
 }
 
 .GENERAL-CONTAINER {
     height: 100vh;
     width: 100vw;
+    overflow-x: visible;
+    scroll-snap-type: none;
 }
 
 .component {
@@ -25,6 +28,11 @@ html {
 .bg-glass {
     background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(5px);
+}
+
+#ts-particles {
+    width: 100vw;
+    height: 100vh;
 }
 
 @media (max-height: 950px) {
